Readability, overflow issues fixed

--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ html, body{
     min-height: 55px;
     padding: 0.5em;
 }
+#name, #profile{
+    overflow-y: hidden;
+}
 a:hover{
     text-decoration: none;
 }
@@ -82,7 +85,12 @@ a:hover{
     margin-top: 15px;
     padding-bottom: 20%;
 }
-
+.landing-text h2{
+    font-size: 30px;
+}
+.landing-text h5{
+    font-size: 24px;
+}
 .continue button{
     color: white;
 }
